--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,3 +15,55 @@
 .font-playfair{
   font-family: "Playfair Display", serif !important;
 }
+
+@media (max-width: 768px) {
+  .cl-userButtonPopoverCard {
+    position: fixed !important;
+    top: 30% !important;
+    left: 50% !important;
+    transform: translate(-50%, -50%) !important;
+    width: 90vw !important;
+    max-width: 360px !important;
+    max-height: 80vh !important;
+    overflow: auto !important;
+    -ms-overflow-style: none; 
+    scrollbar-width: none;
+  }
+  .cl-userButtonPopoverCard::-webkit-scrollbar {
+    display: none;
+  }
+}
+@media (min-width: 769px) {
+  .cl-userButtonPopoverCard {
+    position: fixed !important;
+    top: 20% !important;
+    left: 50% !important;
+    transform: translate(-50%, -50%) !important;
+    width: 90vw !important;
+    max-width: 500px !important;
+    max-height: 80vh !important;
+    overflow: auto !important;
+    -ms-overflow-style: none; 
+    scrollbar-width: none;
+  }
+  .cl-userButtonPopoverCard::-webkit-scrollbar {
+    display: none;
+  }
+}
+@media (min-width: 1100px) {
+  .cl-userButtonPopoverCard {
+    position: fixed !important;
+    top: 30% !important;
+    left: 50% !important;
+    transform: translate(-50%, -50%) !important;
+    width: 90vw !important;
+    max-width: 800px !important;
+    max-height: 80vh !important;
+    overflow: auto !important;
+    -ms-overflow-style: none; 
+    scrollbar-width: none;
+  }
+  .cl-userButtonPopoverCard::-webkit-scrollbar {
+    display: none;
+  }
+}
